# python-uv-init

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
